<resources>
    <string name="app_name">OTA</string>
    <string name="welcome">Welcome to OTA</string>
    <string name="logIn">Login</string>
    <string name="logInSuccess">Login successfully</string>
    <string name="logInFail">Missing username or password, please try again</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="Student">Student</string>
    <string name="Parents">Parents</string>
    <string name="Administrator">Administrator</string>
    <string name="Teacher">Teacher</string>
    <string name="Attendance">Attendance</string>
    <string name="ViewAttendance">View attendance</string>
    <string name="CheckAttendance"> Check attendance</string>
    <string name="ClassNotification">Class Notification</string>
    <string name="ClassSchedule">Class Schedule</string>
    <string name="Grade">Grade</string>
    <string name="Map">Map</string>
    <string name="AbsentLetter">Absent Letter</string>
    <string name="TuitionFee">Tuition Fee</string>
    <string name="Account">Account</string>
    <string name="Class">Class</string>
    <string name="Schedule">Schedule</string>
    <string name="Notification">Notification</string>
    <string name="Setting">Setting</string>
    <string name="logOut">Log Out</string>
    <string name="logOutSuccess">Log out successfully</string>
    <string name="Send">Send</string>
    <string name="Email">Email</string>
    <string name="Subject">Subject</string>
    <string name="Message">Message</string>
    <string name="channelName">Chanel 1</string>
    <string name="channelDescription">This is Chanel 1</string>
    <string name="SubID">SubID</string>
    <string name="SubName">SubName</string>
    <string name="grade_15_1">15phut_1</string>
    <string name="grade_15_2">15phut_2</string>
    <string name="grade_15_3">15phut_3</string>
    <string name="grade_15_4">15phut_4</string>
    <string name="grade_45_1">45phut_1</string>
    <string name="grade_45_2">45phut_2</string>
    <string name="Midterm">giuaki</string>
    <string name="Final">cuoiki</string>
    <string name="EditAttendance">Edit Attendance</string>
    <string name="EditGrade">Edit Grade</string>


</resources>