<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/view_classScheduleButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/ClassSchedule"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/view_attendanceButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/Attendance"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_classScheduleButton" />

        <Button
            android:id="@+id/view_gradeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="@string/Grade"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_attendanceButton" />

        <Button
            android:id="@+id/view_mapButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/Map"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_gradeButton" />

        <Button
            android:id="@+id/view_absentLetterButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="@string/AbsentLetter"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_mapButton" />

        <Button
            android:id="@+id/view_tuitionFeeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/TuitionFee"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_absentLetterButton" />

        <Button
            android:id="@+id/view_logOutButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/logOut"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_tuitionFeeButton"
            android:onClick="onClickLogout"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_logOutButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>