<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/attendanceButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:onClick="onClickAttendance"
            android:text="@string/Attendance"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/classNotificationButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/ClassNotification"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/attendanceButton"/>

        <Button
            android:id="@+id/classScheduleButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="@string/ClassSchedule"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classNotificationButton" />

        <Button
            android:id="@+id/gradeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/Grade"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/classScheduleButton" />

        <Button
            android:id="@+id/logOutButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/logOut"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gradeButton" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logOutButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>