<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="#0BB378"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textAdministrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Administrator"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.566" />
        <Button
            android:id="@+id/view_accountButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/Account"
            android:background="@drawable/button"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
        <Button
            android:id="@+id/view_classButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/Class"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_accountButton"/>

        <Button
            android:id="@+id/view_scheduleButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button"
            android:text="@string/Schedule"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_classButton" />

        <Button
            android:id="@+id/view_notificationButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/Notification"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_scheduleButton" />

        <Button
            android:id="@+id/view_logOutButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/logOut"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_notificationButton" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_logOutButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>