<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Email">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/editSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/Subject"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail" />


        <EditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/Message"
            android:inputType="textMultiLine"
            android:maxLines="20"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editSubject" />

        <Button
            android:id="@+id/send_email_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:background="@drawable/button"
            android:onClick="onClickSendEmail"
            android:text="@string/Send"
            android:textColor="#009999"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>